--- a/VideoActivityDetector/DeteccionDeActividad/DeteccionDeActividad.vcxproj.filters
+++ b/VideoActivityDetector/DeteccionDeActividad/DeteccionDeActividad.vcxproj.filters
@@ -32,4 +32,7 @@
       <Filter>Resource Files</Filter>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
 </Project>
